2006-08-30 Alasdair Allan <aa@astro.ex.ac.uk>

        * widgets/Telescope Status.wdgt/*: Added the skeleton of a working
          Apple Dashboard widget to monitor Robonet-1.0 status.

2006-08-24 Alasdiar Allan <aa@astro.ex.ac.uk>

        * www/ogle/*: Added OGLE Timeline pages to CVS archive
	
	* www/*: Updated the rest of the wesite in the archive to correspond 
	  to the live version deployed onto estar3.astro.ex.ac.uk
        
        * startup/*: Updated startup scripts to account for FTS
 
2006-08-10 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/test_servers.pl: Added FTS support.
	
	* widgets/eSTAR Status.wdgt/*: Added FTS support.

2006-06-29 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/ogle_parsemail.pl: Added meta.ref.url to the photometry data.
	  Fixed big fix where the T_{max} shipping as the timestamp on the
	  packet.

        * www/*: Moved modifications into CVS from the live site on estar3.
	
	* widgets/eSTAR Status.wdgt: Added the status Dashboard widget into
	  the archive.
        
        * www/voevent/cgi-bin/index.cgi: Updated to use Config::Simple

        * www/voevent/cgi-bin/submit.cgi: Updated to use Config::Simple	

        * www/voevent/db/user.dat: Added default user DB in INI format

2006-06-27 Alasdiar Allan <aa@astro.ex.ac.uk>

        * www/*: Added server side components from estar2 and estar3's
          web servers. Located in /var/www/html on those servers, these
          components do networks status and manual submission of events
          and observations.

2006-06-21 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/gcn_vo_server.pl: Skeleton GCN -> VOEvent translator
	
2006-06-20 Alasdiar Allan <aa@astro.ex.ac.uk>

	* bin/make_observation.pl: Added support for submission of 'toop'
	  type observations.
	  
	* bin/user_agent.pl: Added support for submission of 'toop' type
	  obsverations to support the PLANET Manual Override page, see
	  http://vo.astro.ex.ac.uk/robonet-1.0/cgi-bin/index.cgi
	    