@@ -27,7 +27,8 @@
 <select NAME="telescope" onchange="changeSite(this, document.telSelect.telescope);">
   <option VALUE="http://132.160.98.239/teldata"> Faulkes Telescope North
   <option VALUE="http://150.203.153.202/teldata"> Faulkes Telescope South
-  <option VALUE="http://161.72.57.3/teldata"> Liverpool Telescope
+ <!-- <option VALUE="http://161.72.57.3/teldata"> Liverpool Telescope -->
+  <option VALUE="http://vo.astro.ex.ac.uk/teldata"> Liverpool Telescope
 </select><br>
 <i><small><div id='endpoint'></div></small></i>
 </form>
